--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://iswastikmishra.github.io",
+  "homepage": "https://iswastikmishra.github.io/SwastikPortfolio",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -21,6 +21,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
